Section 10.209 with Firebase.

--- a/react-complete-guide/public/index.html
+++ b/react-complete-guide/public/index.html
@@ -36,5 +36,25 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.2.0/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+        https://firebase.google.com/docs/web/setup#available-libraries -->
+
+    <script>
+      // Your web app's Firebase configuration
+      var firebaseConfig = {
+        apiKey: "AIzaSyDnNzuJqZ59KqzqEITA7FQcXlHBQ3RZJeI",
+        authDomain: "burger-builder-cc391.firebaseapp.com",
+        databaseURL: "https://burger-builder-cc391.firebaseio.com",
+        projectId: "burger-builder-cc391",
+        storageBucket: "burger-builder-cc391.appspot.com",
+        messagingSenderId: "485544854266",
+        appId: "1:485544854266:web:49b3e153abf2c540183f43"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+    </script>
   </body>
 </html>
